@@ -1,3 +1,7 @@
+2012-09-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* updatewindow.py, menu.py: Show screen name on retweet dialog.
+
 2012-09-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* updatewindow.py, update.glade: Added multi-account support.
